fix: swap bg colors for better page contrast

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -178,7 +178,7 @@ section.bg-color {
 
 .testimonial-block {
   text-align: center;
-  background: var(--clr-bg-1);
+  background: var(--clr-white);
   padding: var(--padding-base);
   box-shadow: var(--header-box-shadow);
   border-radius: var(--border-radius-base);
